trying to add img to streamlit

--- a/pgms/01_pitchfork_review_analysis.ipynb
+++ b/pgms/01_pitchfork_review_analysis.ipynb
@@ -1942,19 +1942,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2918,
+   "execution_count": 2922,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0.9999999999999999, 'Late Night Tales', 'BADBADNOTGOOD'), (0.1011350516693006, 'Fabric Presents Bonobo', 'Bonobo'), (0.09309840622101793, 'Miles at the Fillmore - Miles Davis 1970: The Bootleg Series Vol. 3', 'Miles Davis'), (0.09281083864281647, 'Highly Rare', 'Makaya McCraven'), (0.09101211418661392, 'Where Did the Night Fall', 'UNKLE'), (0.08327076171880668, 'Sour Soul', 'Ghostface Killah / BADBADNOTGOOD'), (0.0719187935297689, 'Sound of the Police', 'Cut Chemist'), (0.07002506056635588, 'The Cellar Door Sessions 1970', 'Miles Davis'), (0.06926915397467705, \"I'm New Here\", 'Gil Scott-Heron'), (0.06906305191645423, 'The North Borders', 'Bonobo'), (0.06550070660504732, 'Organism', 'Jimi Tenor'), (0.06453094345758813, 'Product Placement', 'Cut Chemist / DJ Shadow'), (0.06449348337059649, 'The Company of Wolves', 'Hi-Fidel and DJ Crucial'), (0.06377553337600078, 'Berlin Serengeti', 'Radio Citizen'), (0.06363516358342126, 'Only the Lonely EP', 'UNKLE'), (0.06262244723377607, 'Offering: Live at Temple University', 'John Coltrane'), (0.0622200810582344, 'Adventura Anatomica', 'Maja Ratkje'), (0.06196864398262766, 'New York', 'Frank Sinatra'), (0.060512410776939154, 'Tales of the Forgotten Melodies', 'Wax Tailor'), (0.059971849808236374, \"Waitin' Our Turn\", 'Coughee Brothaz'), (0.05984886980015296, 'Vegas: Live', 'Frank Sinatra'), (0.05905992234931601, 'Seven Storey Mountain VI', 'Nate Wooley'), (0.057879974416397445, 'Suite for Max Brown', 'Jeff Parker'), (0.057167363324772055, 'Shades of Flu: Healthy Remixes For an Ill Moment', 'Kassa Overall'), (0.056523679674882435, 'Charango', 'Morcheeba'), (0.055941251690567906, 'At Last!', 'Etta James'), (0.055168423978949915, 'Remixes: 1997-2000', 'Jazzanova'), (0.05499762633036234, 'Truth, Liberty & Soul - Live in NYC: The Complete 1982 NPR Jazz Alive! Recording', 'Jaco Pastorius'), (0.054599263997698565, \"Everything's Getting Older\", 'Aidan Moffat / Bill Wells'), (0.05389528394480644, 'Radio Retaliation', 'Thievery Corporation'), (0.05302942736701597, 'The Final Tour: The Bootleg Series, Vol. 6', 'Miles Davis / John Coltrane'), (0.052857082619198796, 'Tragicomic', 'Vijay Iyer'), (0.05209434851439103, 'Live at Low End Theory', 'Daedelus'), (0.05164369701712336, 'DJ Kicks', 'Nightmares on Wax'), (0.051356039406274194, 'Unemployed', 'Alog'), (0.05094184391965597, 'Listen & Learn', 'Hexstatic'), (0.05078512932943355, 'Solid Steel Presents: Now, Listen!', 'DJ Food'), (0.050585908610325005, 'Bitches Brew [Legacy Edition]', 'Miles Davis'), (0.05058016221760856, 'Optometry', 'DJ Spooky'), (0.05029025898982772, \"Flutes, Echoes, It's All Happening!\", 'Carlos Niño & Friends'), (0.04887798471540428, 'The Elements', 'Joe Henderson / Alice Coltrane'), (0.048771584255404586, 'Sketches of Spain: Legacy Edition', 'Miles Davis'), (0.0486120152897167, 'Recorded Live', 'Amon Tobin'), (0.048600324682744604, '12 (+1) Imaginary Views', 'Ellery Eskelin'), (0.048576643652899126, 'Luxury', 'Fantastic Plastic Machine'), (0.04849170817998392, 'I Think I’m Good', 'Kassa Overall'), (0.04825816569894163, 'One One One', 'Shining'), (0.048234757220983075, 'Dual Identity', 'Dual Identity'), (0.048171118586695476, 'A Love Supreme: The Complete Masters', 'John Coltrane')]\n"
+      "[(1.0000000000000004, 'The Epic', 'Kamasi Washington'), (0.2500581797739261, 'Harmony of Difference EP', 'Kamasi Washington'), (0.2012328072268466, 'Heaven and Earth', 'Kamasi Washington'), (0.1903413548714132, 'The Choice', 'Kamasi Washington'), (0.16745086086262906, 'A Love Supreme: The Complete Masters', 'John Coltrane'), (0.15520097059686144, 'Becoming (Music From the Netflix Original Documentary)', 'Kamasi Washington'), (0.13485983890352976, 'Planetary Prince', 'Cameron Graves'), (0.12899409527944097, 'Offering: Live at Temple University', 'John Coltrane'), (0.11762574707289261, 'The Final Tour: The Bootleg Series, Vol. 6', 'Miles Davis / John Coltrane'), (0.11714391195978822, 'Both Directions at Once: The Lost Album', 'John Coltrane'), (0.11628233135972346, 'The Complete In a Silent Way Sessions', 'Miles Davis'), (0.11179699803957624, 'The Bootleg Series, Volume 1: Live in Europe 1967', 'Miles Davis'), (0.1117333565403923, 'Interstellar Space Revisited: The Music of John Coltrane', 'Gregg Bendian / Nels Cline'), (0.11155574681932157, 'Tauhid/Jewels of Thought/Deaf Dumb Blind (Summun Bukmun Umyun)', 'Pharoah Sanders'), (0.11149984677791092, 'Sketches of Spain: Legacy Edition', 'Miles Davis'), (0.11042881652496218, 'The Beyond / Where the Giants Roam', 'Thundercat'), (0.10920564739137915, 'Blue World', 'John Coltrane'), (0.10492471751136728, 'The Cellar Door Sessions 1970', 'Miles Davis'), (0.10376112930740168, 'The Elements', 'Joe Henderson / Alice Coltrane'), (0.1029438736220364, 'Journey in Satchidananda', 'Alice Coltrane'), (0.10280960763658235, 'Get Up With It', 'Miles Davis'), (0.10237685504776166, \"Live at the Fillmore East (March 7, 1970): It's About That Time\", 'Miles Davis'), (0.10217460137723047, 'Freedom Jazz Dance: The Bootleg Series, Vol. 5', 'Miles Davis Quintet'), (0.10210309982326585, 'Live in Paris (1975)', 'Pharoah Sanders'), (0.10185873124336951, 'The Olatunji Concert: The Last Live Recording', 'John Coltrane'), (0.10141925588643744, 'Miles at the Fillmore - Miles Davis 1970: The Bootleg Series Vol. 3', 'Miles Davis'), (0.09890755970533033, 'The Complete Jack Johnson Sessions', 'Miles Davis'), (0.09831118000069412, 'Bitches Brew [Legacy Edition]', 'Miles Davis'), (0.09797583488908175, 'Report from Iron Mountain', 'Date Course Pentagon Royal Garden'), (0.09731242701874179, 'Miles Davis at Newport 1955-1975: The Bootleg Series Vol. 4', 'Miles Davis'), (0.09730948312990476, 'Love In a Time of Madness', 'José James'), (0.09730113641483298, 'Rhythmatism', 'Steve Reid'), (0.09606440752448735, 'These Are the Vistas', 'The Bad Plus'), (0.09446741110304449, 'Man Made Object', 'GoGo Penguin'), (0.09338893032850698, 'Far From Over', 'Vijay Iyer Sextet'), (0.09066365601855123, 'The Complete On the Corner Sessions', 'Miles Davis'), (0.09011852255383507, 'A Jackson in Your House/Message to Our Folks', 'Art Ensemble of Chicago'), (0.08884010513627433, 'The Bootleg Series, Volume 2: Live in Europe 1969', 'Miles Davis'), (0.08737910278946562, 'Something Wicked This Way Comes', 'The Herbaliser'), (0.08558470024253556, 'The Golden Age of Apocalypse', 'Thundercat'), (0.08558348445272676, 'ArtScience', 'Robert Glasper Experiment'), (0.08552607975445113, 'Covered', 'Robert Glasper Trio'), (0.08458474967185103, '12 (+1) Imaginary Views', 'Ellery Eskelin'), (0.08363278587054518, \"Everything's Beautiful / Miles Ahead OST\", 'Robert Glasper / Miles Davis'), (0.0827633804182696, 'World Spirituality Classics 1: The Ecstatic Music of Alice Coltrane Turiyasangitananda', 'Alice Coltrane'), (0.08273456622547891, 'Drunk', 'Thundercat'), (0.08196236274751371, 'Lord of Lords', 'Alice Coltrane'), (0.08191814767161193, 'A Cosmic Rhythm With Each Stroke', 'Vijay Iyer / Wadada Leo Smith'), (0.08188654538990725, 'Kind of Blue: 50th Anniversary Edition', 'Miles Davis')]\n"
      ]
     }
    ],
    "source": [
-    "print(similarities['Late Night Tales'])\n",
+    "print(similarities['The Epic'])\n",
     "#print(similarities.values()[0].keys()[0])"
    ]
   },
@@ -2088,59 +2088,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2917,
+   "execution_count": 2921,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of reviews containing badbadnotgood are: 4\n",
-      "User requested 2 Matches\n",
-      "User requested 5 Recommended albums per Match\n",
-      "--------------------\n",
-      "Matched Album Number 1:\n",
-      "It Is What It Is by Thundercat\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 1:\n",
-      "The Golden Age of Apocalypse by Thundercat with 0.257 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 2:\n",
-      "Drunk by Thundercat with 0.199 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 3:\n",
-      "Planetary Prince by Cameron Graves with 0.137 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 4:\n",
-      "Apocalypse by Thundercat with 0.131 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 5:\n",
-      "Heaven and Earth by Kamasi Washington with 0.084 similarity score\n",
-      "--------------------\n",
-      "Matched Album Number 2:\n",
-      "Cannonball! by Sen Morimoto\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 1:\n",
-      "Sen Morimoto by Sen Morimoto with 0.374 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 2:\n",
-      "Innercity Griots by Freestyle Fellowship with 0.082 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 3:\n",
-      "Sélébéyone by Steve Lehman / Sélébéyone with 0.08 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 4:\n",
-      "David Axelrod by David Axelrod with 0.077 similarity score\n",
-      "--------------------\n",
-      "Recommended album based on matched (above) 5:\n",
-      "Live in Paris (1975) by Pharoah Sanders with 0.076 similarity score\n",
-      "--------------------\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'not found'"
+      ]
+     },
+     "execution_count": 2921,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# select text input, # of matches based on text, # of recs per match\n",
-    "artsimrec('badbadnotgood',2,5)"
+    "artsimrec('kamasi',0,5)"
    ]
   },
   {
