added mp3 to presentation

--- a/pgms/pitchfork-bsoup.ipynb
+++ b/pgms/pitchfork-bsoup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2224.3 Safari/537.36\n"
+      "Mozilla/5.0 (Windows NT 5.1; rv:31.0) Gecko/20100101 Firefox/31.0\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,20 +170,32 @@
     "    except AttributeError:\n",
     "        img = None\n",
     "    \n",
+    "    # get audio\n",
+    "    \n",
+    "    try:    \n",
+    "        \n",
+    "        #audio = soup.find(class_=\"multi-link\").string #genre\n",
+    "        #audio= [item['href'] for item in soup.find_all('multi-link')]\n",
+    "        \n",
+    "#         for li in soup.find_all(class_=\"multi-link\"):\n",
+    "#             audio.append(li.get('href'))\n",
+    "    except AttributeError:\n",
+    "        audio= None\n",
+    "    \n",
     "    \n",
     "    try:\n",
     "        date = str(soup.find(class_=\"pub-date\").string) #date\n",
     "    except AttributeError:\n",
     "        date = None\n",
     "    #create dataframe with column labels\n",
-    "    d = {'artist': [get_artist(title)], 'album': [get_album(title)], 'score': [score], 'genre': [genre], 'review': [string], 'othercat':[othercat], 'img':[img], 'best': [1 if \"Best new\" in string else 0], 'date': [date]}\n",
+    "    d = {'artist': [get_artist(title)], 'album': [get_album(title)], 'score': [score], 'genre': [genre], 'review': [string], 'othercat':[othercat], 'img':[img], 'audio':[audio], 'best': [1 if \"Best new\" in string else 0], 'date': [date]}\n",
     "    df = pd.DataFrame(data=d)\n",
     "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -321,59 +333,7 @@
      "output_type": "stream",
      "text": [
       "page <Response [200]>\n",
-      "page <Response [200]>\n",
-      "page <Response [200]>\n",
-      "page <Response [200]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "page <Response [404]>\n",
-      "['/reviews/albums/4381-hysteria/', '/reviews/albums/7482-nut-music-as-free-as-the-squirrels/', '/reviews/albums/8926-madness-love-and-mysticism/', '/reviews/albums/1533-revolution-ep/', '/reviews/albums/570-duets-2001/', '/reviews/albums/8924-songs-from-the-hermetic-theatre/', '/reviews/albums/7438-masses/', '/reviews/albums/2986-beautiful/', '/reviews/albums/4727-lemonjellyky/', '/reviews/albums/8555-musipal/', '/reviews/albums/7117-new-orbit/', '/reviews/albums/4225-remixes-1997-2000/', '/reviews/albums/4385-unsolved/', '/reviews/albums/5793-dj-kicks/', '/reviews/albums/5424-fragments-of-freedom/', '/reviews/albums/7439-disappeared/', '/reviews/albums/8004-the-mirror-conspiracy/', '/reviews/albums/8087-4-ton-mantis-ep/', '/reviews/albums/7972-out-of-nowhere/', '/reviews/albums/7959-last-century-modern/', '/reviews/albums/8582-surrendered/', '/reviews/albums/8082-supermodified/', '/reviews/albums/965-nipples/', '/reviews/albums/7437-oddities/', '/reviews/albums/2384-the-quick-and-the-dead/', '/reviews/albums/4641-good-looking-blues/', '/reviews/albums/7115-pastoral-composure/', '/reviews/albums/7436-treader/', '/reviews/albums/1509-interstellar-space-revisited-the-music-of-john-coltrane/', '/reviews/albums/7119-dna/', '/reviews/albums/8005-abductions-and-reconstructions/', '/reviews/albums/2985-luxury/', '/reviews/albums/7973-organism/', '/reviews/albums/3830-very-mercenary/', '/reviews/albums/5794-carboot-soul/', '/reviews/albums/5099-brand-new-secondhand/', '/reviews/albums/1535-let-us-replay/']\n"
+      "['/reviews/albums/bobby-womack-the-poet-the-poet-ii/', '/reviews/albums/wau-wau-collectif-yaral-sa-doom/', '/reviews/albums/various-artists-j-jazz-volume-3-deep-modern-jazz-from-japan/', '/reviews/albums/pino-palladino-blake-mills-notes-with-attachments/', '/reviews/albums/sam-gendel-fresh-bread/', '/reviews/albums/femi-kuti-made-kuti-legacy/', '/reviews/albums/archie-shepp-jason-moran-let-my-people-go/', '/reviews/albums/patricia-brennan-maquishti/', '/reviews/albums/baldi-gerycz-duo-after-commodore-perry-service-plaza/', '/reviews/albums/roland-haynes-second-wave/', '/reviews/albums/winston-cw-good-guess/', '/reviews/albums/jahari-massamba-unit-pardon-my-french/']\n"
      ]
     },
     {
@@ -382,13 +342,13 @@
        "True"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gather(53,50,'/Users/chrischan/Documents/02_Class/Metis/bootcamp/githubrepo/Metis_proj5/data','pitchfork_jazz_img')"
+    "gather(1,1,'/Users/chrischan/Documents/02_Class/Metis/bootcamp/githubrepo/Metis_proj5/data','pitchfork_jazz_audio')"
    ]
   },
   {
