cleanup for github

--- a/pgms/01_pitchfork_review_analysis.ipynb
+++ b/pgms/01_pitchfork_review_analysis.ipynb
@@ -11,8 +11,10 @@
     "**Purpose:** <br>\n",
     ". The purpose of the project is to develop a modern jazz artist recommender/discovery based on sub-genres or non-jazz artists somehow linked to the jazz album via pitchfork review text. Upon inspection of reviews (namely jazz reviews) there is high chance of other non-jazz artist referenced to shed light on some similarity. The idea is to take these links as features or search terms in a rec system that would link to the jazz artist. The jazz artists would be cmpared as well given various topics modeled from all of the reviews.\n",
     "\n",
-    ". line art jazz\n",
+    ". line art jazz<br>\n",
     "https://www.google.com/search?sxsrf=ALeKk03LfKL9YNsVNY-h8BOJVg7BAqqj7Q:1616130097653&source=univ&tbm=isch&q=continuous+line+art+jazz&sa=X&ved=2ahUKEwjFh4bjybvvAhVGQ80KHV9fAQ0Q7Al6BAgEEEs&biw=1920&bih=898#imgrc=28P6ra66mhUUwM\n",
+    ". music download<br>\n",
+    "https://freemp3cloud.com/<br>\n",
     "\n",
     ". 1. bring in data, count vectorize, etc. <br>\n",
     ". 2. preprocessing - clean, lemmatize <br>\n",
@@ -1377,7 +1379,9 @@
   {
    "cell_type": "code",
    "execution_count": 2106,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
