updated streamlit - spotify and cleaning

--- a/pgms/01_pitchfork_review_analysis.ipynb
+++ b/pgms/01_pitchfork_review_analysis.ipynb
@@ -15,6 +15,8 @@
     "https://www.google.com/search?sxsrf=ALeKk03LfKL9YNsVNY-h8BOJVg7BAqqj7Q:1616130097653&source=univ&tbm=isch&q=continuous+line+art+jazz&sa=X&ved=2ahUKEwjFh4bjybvvAhVGQ80KHV9fAQ0Q7Al6BAgEEEs&biw=1920&bih=898#imgrc=28P6ra66mhUUwM\n",
     ". music download<br>\n",
     "https://freemp3cloud.com/<br>\n",
+    ". Spotify features (study: https://cmci.colorado.edu/idlab/assets/bibliography/pdf/Pinter2020-icwsm.pdf)<br>\n",
+    "https://zenodo.org/record/3603330#.XheASC3MzOQ <br>\n",
     "\n",
     ". 1. bring in data, count vectorize, etc. <br>\n",
     ". 2. preprocessing - clean, lemmatize <br>\n",
