--- a/pgms/04_pitchfork_spotify_data.ipynb
+++ b/pgms/04_pitchfork_spotify_data.ipynb
@@ -1628,10 +1628,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Testing\n",
+    "df_wide2.to_csv(r'archive/testing.csv')\n",
+    "#df_wide2.to_csv(r'../data/df_emo_top_wide_nm_spuri.csv')"
+   ]
   },
   {
    "cell_type": "code",
