updating dirs for app

--- a/pgms/04_pitchfork_spotify_data.ipynb
+++ b/pgms/04_pitchfork_spotify_data.ipynb
@@ -1628,12 +1628,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Testing\n",
-    "df_wide2.to_csv(r'archive/testing.csv')\n",
+    "df_wide2.to_csv('archive/testing.csv')\n",
     "#df_wide2.to_csv(r'../data/df_emo_top_wide_nm_spuri.csv')"
    ]
   },
